@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [mms] Allow tagging system to be disabled via configuration option.
 * [mjr] Fix importing certain vCards to sources only using the &apos;email&apos; attribute (Bug #12955).
 * [mjr] Do not export empty property names in CardDav responses (Bug #12782).
 * [jan] Make shares table compatible with Oracle.
@@ -1774,6 +1775,7 @@
    <date>2013-08-15</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [mms] Allow tagging system to be disabled via configuration option.
 * [mjr] Fix importing certain vCards to sources only using the &apos;email&apos; attribute (Bug #12955).
 * [mjr] Do not export empty property names in CardDav responses (Bug #12782).
 * [jan] Make shares table compatible with Oracle.
