@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[mms] Allow tagging system to be disabled via configuration option.
 [mjr] Fix importing certain vCards to sources only using the 'email' attribute
       (Bug #12955).
 [mjr] Do not export empty property names in CardDav responses (Bug #12782).
